# Flashy

./: .gitignore  ERD-Flashy.drawio  app.py  package-lock.json  package.json  pyproject.toml
app/: cache.py  config.py  database.py  main.py
app/crud/: card.py  deck.py  flashcards.py  subject.py
app/database_ops/: card.py  deck.py  deck_config.py  practice_card.py  practice_session.py  practice_session_deck_config.py  subject.py
app/models/: __init__.py  app_model.py  card.py  deck.py  deck_config.py  flashcards.py  practice_card.py  practice_config.py  practice_session.py  practice_session_deck_config.py  subject.py
app/routers/: card.py  deck.py  deck_config.py  flashcards.py  practice.py  subject.py
app/routers/api/: card.py  deck.py  deck_config.py  practice.py  practice_session.py  subject.py
app/routers/pages/: card.py  deck.py  deck_config.py  index.py  practice_session.py  subject.py
app/scripts/: export_openapi.py
app/services/: practice.py
app/templates/: base.jinja  index.jinja
app/templates/card/: create.jinja  list.jinja  read.jinja
app/templates/deck/: create.jinja  list.jinja  read.jinja
app/templates/deck_config/: create.jinja  list.jinja  read.jinja
docs/: STORIES.md
docs/adr/: ???-use-postgresql-for-database.md
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  navConfig.ts
tests/: conftest.py  test_cards.py  test_deck_config.py  test_decks.py  test_subjects.py
tests/api_tests/: conftest.py  test_deck_config.py  test_decks.py  test_practice.py
(+56 files in other folders)
