[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.fastapi]
entrypoint = "app.main:app"

[project]
name = "flashy"
version = "0.1.0"
dependencies = [
    "fastapi[standard]>=0.110",
    "psycopg2-binary>=2.9.12",
    "sqlmodel>=0.0.38",
]
requires-python = ">=3.11"
description = "Flashcards, but cooler."

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
